--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     dataBinding.enabled = true
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
     defaultConfig {
         applicationId "com.github.ppartisan.fishportal"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -26,35 +26,39 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile "android.arch.lifecycle:extensions:$rootProject.ext.arch"
-    compile "android.arch.lifecycle:runtime:$rootProject.ext.arch"
-    compile "android.arch.persistence.room:runtime:$rootProject.ext.arch"
-    compile "com.android.support:appcompat-v7:$rootProject.ext.support"
-    compile "com.android.support:cardview-v7:$rootProject.ext.support"
-    compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraint"
-    compile "com.android.support:recyclerview-v7:$rootProject.ext.support"
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.arch"
+    implementation "android.arch.lifecycle:runtime:$rootProject.ext.arch"
+    implementation "android.arch.persistence.room:runtime:$rootProject.ext.arch"
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.support"
+    implementation "com.android.support:cardview-v7:$rootProject.ext.support"
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraint"
+    implementation "com.android.support:recyclerview-v7:$rootProject.ext.support"
 
-    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit"
-    compile "com.google.code.gson:gson:$rootProject.ext.gson"
-    compile "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit"
+    implementation "com.google.code.gson:gson:$rootProject.ext.gson"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit"
 
-    compile "com.google.dagger:dagger:$rootProject.ext.dagger2"
-    compile "com.google.dagger:dagger-android:$rootProject.ext.dagger2"
-    compile "com.google.dagger:dagger-android-support:$rootProject.ext.dagger2"
+    implementation "com.google.dagger:dagger:$rootProject.ext.dagger2"
+    implementation "com.google.dagger:dagger-android:$rootProject.ext.dagger2"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.ext.dagger2"
 
     annotationProcessor "android.arch.persistence.room:compiler:$rootProject.ext.arch"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.arch"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2"
     annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.ext.dagger2"
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
