--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-rc2'
     }
 }
 
@@ -19,10 +20,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    arch = '1.0.0-alpha5'
+    arch = '1.0.0-rc1'
     constraint = '1.0.2'
-    dagger2 = '2.11'
+    dagger2 = '2.12'
     gson = '2.8.1'
     retrofit = '2.3.0'
-    support = '26.0.1'
+    support = '26.1.0'
 }
